test/Fail/Issue6112.err
Issue6112.agda:22.13-15: error: [GenericDocError]
★ should be a constructor of type G ★ but it isn't.
Do you have any non-confluent rewrite rules?
when checking the pragma REWRITE G2
